# esemese-backend

./: .gitignore  Cargo.toml  api-tests.ps1
src/: main.rs
src/errors/: mod.rs
src/models/: categories.rs  favourites.rs  groups.rs  mod.rs  pinata.rs  uploads.rs
src/routes/: categories.rs  favourites.rs  groups.rs  mod.rs  uploads.rs
