[package]
name = "esemese-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
postgres = "0.19.10"
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
tokio = { version = "1.46.0", features = ["full"] }
axum = { version = "0.8.4", features = ["http2", "macros", "ws", "multipart"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
dotenv = "0.15.0"
reqwest = { version = "0.12.22", features = ["json", "multipart"] }
tower-http = { version = "0.6.6", features = ["cors"] }
http = "1.3.1"
thiserror = "2.0.12"
url = "2.5.4"
serde_json = "1.0.140"
